Fix margin between Covers in CoverList

--- a/src/stylus/main.styl
+++ b/src/stylus/main.styl
@@ -12,14 +12,13 @@ $anime := {
     width: 150px
     img-height: 210px
     img-border: 4px
-    margin: 2px
     font-size: 16px
     rating-size: 25px
     description-size: 24px
     subtitle-size: 19px
 }
 
-$anime-height = $anime.img-height + $anime.img-border + $anime.padding + $anime.margin * 2 + $anime.subtitle-size + $anime.font-size * 2.5 + $anime.rating-size + $anime.description-size + $anime.padding
+$anime-height = $anime.img-height + $anime.img-border + $anime.padding + $anime.subtitle-size + $anime.font-size * 2.5 + $anime.rating-size + $anime.description-size + $anime.padding
 
 .application.theme--dark {
   h1, h2, h3, h4, h5, h6 {
